<resources>
    <string name="app_name">Björk</string>
    <string name="motto">furniture &amp; design</string>
    <string name="beds">Postele</string>
    <string name="couches">Pohovky</string>
    <string name="lamps">Lampy</string>
    <string name="tables">Stoly</string>
    <string name="toys">Hračky</string>
    <string name="decoration">Dekorace</string>
    <string name="wardrobes">Skříně</string>
    <string name="products">Produkty</string>
    <string name="cart">Košík</string>
    <string name="store">Prodejna</string>
    <string name="profile">Profil</string>
    <string name="about">O aplikaci</string>
    <string name="all">Vše</string>
    <string name="feedback">Feedback</string>
    <string name="favourite">Oblíbené</string>
    <string name="login">Přihlášení</string>
    <string name="logout">Odhlášení</string>
    <string name="email">Email</string>
    <string name="password">Heslo</string>
    <string name="empty_list_description">zatím nemáte žádné oblíbené produkty</string>
    <string name="unlogged_user">Nejste přihlášen</string>
    <string name="feature_not_available">Funkce není dostupná</string>
    <string name="navigate">Navigovat</string>
    <string name="to_cart">Do košíku</string>
    <string name="detail_product">Detail produktu</string>
    <string name="nearest_store">Nejbližší prodejna</string>
    <string name="system_version">Android OS</string>
    <string name="version">Verze</string>
    <string name="firstname">Jméno</string>
    <string name="lastname">Přijmení</string>
    <string name="address">Adresa</string>
    <string name="change">Změnit</string>
    <string name="incompleteProfile">Váš profil není kompletní!</string>
    <string name="login_description">Pro používání této funkce se musíte přihlásit</string>
    <string name="user_not_exist">Uživatel neexistuje</string>
    <string name="add_to_cart">Přidat do košíku</string>
    <string name="registration">Registrovat</string>
    <string name="registration_description">Uživatel s Vámi zadaným emailem neexistuje, chcete se registrovat?</string>
    <string name="add_to_cart_description">Zvolte množství a barvu Vámi vybraného produktu</string>
    <string name="confirm">Potvrdit</string>
    <string name="color">Barva</string>
    <string name="payment">Platba</string>
    <string name="order">Objednávka</string>
    <string name="order_confirmation">Potvrzení objednávky</string>
    <string name="order_description">Zkontrolujte informace o objednávce a zvolte způsob platby</string>
    <string name="sort_and_filter">Seřazení &amp; Filtrování</string>
    <string name="sort_and_filter_description">zvolte způsob řazení a typ zobrazených produktů</string>
    <string name="order_in_progress">vyřizování objednávky</string>
    <string name="order_complete">děkujeme za Váš nákup</string>
    <string name="send">Odeslat</string>
    <string name="message">Zpráva</string>
    <string name="empty_shopping_cart">Vás nákupník košík je prázdný</string>
    <string name="unknown">Neznámý</string>
    <string name="uncomplete_profile">Bohužel nemáte dokončený profil</string>
    <string name="gender">Pohlaví</string>
    <string name="wrong_password">Chybné heslo</string>
    <string name="loading_cart">Připravujeme Váš košík</string>
    <string name="loading_search">Hledáme produkty</string>
    <string name="cart_item_removed">odebrán z košíku</string>
    <string name="undo">Vrátit</string>
    <string name="connection_error">Nedostupná data</string>
    <string name="connection_error_description">Zkuste to prosím později…</string>
    <string name="search">Vyhledávání</string>
    <string name="search_hint">Vyhledávání produktů</string>
    <string name="no_product_found">Nebyl nalezen žádný produkt</string>
    <string name="delivery">Doručení</string>
    <string name="description">Popis</string>
    <string name="info">Info</string>
    <string name="download">Stáhnout</string>
    <string name="storage_unavailable">Nedostupné úložiště</string>
    <string name="image_downloaded">Obrázek uložen</string>
    <string name="share_with">Sdílet</string>
    <string name="like_remove">Odebrat z oblíbených</string>
    <string name="discount_notification_text">Produkt zlevněn na </string>
    <string name="discount_notification_channel_name">Zvýhodněné nabídky</string>
    <string name="discount_notification_channel_description">Zobrazení zvýhodněných nabídek Vašich oblíbených produktů</string>
    <string name="progress_notification_channel_name">Postup stahování</string>
    <string name="progress_notification_channel_description">Zobrazení postupu operací prováděných na pozadí</string>
    <string name="image_downloading">Stahování obrázku</string>
    <string name="image_download_failed">Stažení obrázku se nezdařilo</string>
    <string name="image_download_completed">Obrázek úspěšně stažen</string>
    <string name="storage_permission_denied">K uložení obrázků nám musíte dát přístup k vašemu úložišti</string>

    <string-array name="genders">
        <item>Muž</item>
        <item>Žena</item>
    </string-array>

    <string-array name="delivery_methods">
        <item>Bjork Home Delivery</item>
    </string-array>

    <string-array name="sort_attributes">
        <item>Název</item>
        <item>Cena</item>
    </string-array>

    <string-array name="sort_directions">
        <item>Vzestupně</item>
        <item>Sestupně</item>
    </string-array>

    <string-array name="filter_product_types">
        <item>Vše</item>
        <item>Postele</item>
        <item>Stoly</item>
        <item>Sedačky</item>
        <item>Světla</item>
        <item>Lampy</item>
        <item>Dekorace</item>
        <item>Hračky</item>
    </string-array>
</resources>
