<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_bottom_sheet"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:background="@drawable/bottom_sheet_shape"
    android:padding="@dimen/bottom_sheet_padding">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_normal"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/order_confirmation"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="@dimen/bottom_sheet_description_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/space_normal"
        android:fontFamily="@font/roboto_italic"
        android:gravity="center"
        android:lines="2"
        android:text="@string/order_description"
        android:textSize="@dimen/text_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <View
        android:id="@+id/view"
        android:layout_width="@dimen/bottom_sheet_separator_width"
        android:layout_height="@dimen/bottom_sheet_separator_height"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/space_normal"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/orderInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_big"
        android:layout_marginTop="@dimen/space_big"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <ImageView
            android:id="@+id/userIcon"
            android:layout_width="@dimen/icon_size_small"
            android:layout_height="@dimen/icon_size_small"
            android:layout_gravity="center"
            android:background="@drawable/ic_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/userText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/space_normal"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/black"
            android:textSize="@dimen/text_normal"
            android:text="@string/unknown"
            app:layout_constraintStart_toEndOf="@+id/userIcon"
            app:layout_constraintTop_toTopOf="@+id/userIcon" />

        <ImageView
            android:id="@+id/addressIcon"
            android:layout_width="@dimen/icon_size_small"
            android:layout_height="@dimen/icon_size_small"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/space_normal"
            android:background="@drawable/ic_place"
            app:layout_constraintStart_toStartOf="@+id/userIcon"
            app:layout_constraintTop_toBottomOf="@+id/userIcon" />

        <TextView
            android:id="@+id/addressText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/space_normal"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/black"
            android:textSize="@dimen/text_normal"
            android:text="@string/unknown"
            app:layout_constraintStart_toEndOf="@+id/addressIcon"
            app:layout_constraintTop_toTopOf="@+id/addressIcon" />

        <ImageView
            android:id="@+id/moneyIcon"
            android:layout_width="@dimen/icon_size_small"
            android:layout_height="@dimen/icon_size_small"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:layout_marginTop="@dimen/space_normal"
            android:background="@drawable/ic_wallet"
            app:layout_constraintStart_toStartOf="@+id/addressIcon"
            app:layout_constraintTop_toBottomOf="@+id/addressIcon" />

        <TextView
            android:id="@+id/moneyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/space_normal"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/black"
            android:textSize="@dimen/text_normal"
            app:layout_constraintStart_toEndOf="@+id/moneyIcon"
            app:layout_constraintTop_toTopOf="@+id/moneyIcon" />

        <ImageView
            android:id="@+id/deliveryIcon"
            android:layout_width="@dimen/icon_size_small"
            android:layout_height="@dimen/icon_size_small"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/text_normal"
            android:background="@drawable/ic_delivery_van"
            app:layout_constraintStart_toStartOf="@+id/moneyIcon"
            app:layout_constraintTop_toBottomOf="@+id/moneyIcon" />

        <Spinner
            android:id="@+id/deliveryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/space_normal"
            android:fontFamily="@font/roboto"
            android:theme="@style/Spinner"
            app:layout_constraintStart_toEndOf="@+id/deliveryIcon"
            app:layout_constraintTop_toTopOf="@+id/deliveryIcon" />

    </android.support.constraint.ConstraintLayout>

    <android.support.design.button.MaterialButton
        android:id="@+id/confirmButton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="@dimen/bottom_sheet_button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_big"
        android:text="@string/confirm"
        app:cornerRadius="@dimen/corner_radius"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderInfo" />

    <TextView
        android:id="@+id/uncomplete_profile"
        android:layout_width="@dimen/bottom_sheet_button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_normal"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/uncomplete_profile"
        android:textAllCaps="true"
        android:textColor="@color/red"
        android:textSize="@dimen/text_normal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/confirmButton"
        app:layout_constraintStart_toStartOf="@+id/confirmButton"
        app:layout_constraintTop_toBottomOf="@+id/confirmButton" />

    <LinearLayout
        android:id="@+id/progressLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_normal"
        android:layout_marginBottom="@dimen/space_normal"
        android:visibility="gone"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/confirmButton"
        app:layout_constraintStart_toStartOf="@+id/confirmButton"
        app:layout_constraintTop_toBottomOf="@+id/confirmButton">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/progressText"
            android:layout_width="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_normal"
            android:layout_marginTop="@dimen/space_normal"
            android:textAllCaps="true"
            android:fontFamily="@font/roboto_bold"
            android:layout_height="wrap_content"
            android:text="@string/order_in_progress"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
