<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_bottom_sheet"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:background="@drawable/bottom_sheet_shape"
    android:padding="@dimen/bottom_sheet_padding">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_normal"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/user_not_exist"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="@dimen/bottom_sheet_description_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/space_normal"
        android:fontFamily="@font/roboto_italic"
        android:gravity="center"
        android:lines="2"
        android:text="@string/registration_description"
        android:textSize="@dimen/text_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <View
        android:id="@+id/view"
        android:layout_width="@dimen/bottom_sheet_separator_width"
        android:layout_height="@dimen/bottom_sheet_separator_height"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/space_normal"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_big"
        android:layout_marginTop="@dimen/space_big"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <ImageView
            android:id="@+id/registrationIcon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_gravity="center"
            android:background="@drawable/ic_user"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/registrationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/space_normal"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/registration"
            android:textColor="@color/black"
            android:textSize="@dimen/text_normal"
            app:layout_constraintBottom_toBottomOf="@+id/registrationIcon"
            app:layout_constraintStart_toEndOf="@+id/registrationIcon"
            app:layout_constraintTop_toTopOf="@+id/registrationIcon" />
    </android.support.constraint.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="@dimen/bottom_sheet_spinner_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/space_big"
        android:layout_marginTop="@dimen/space_normal"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration" />

</android.support.constraint.ConstraintLayout>
